// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organizations screen handle request status feedback renders error state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f7f7f7",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListEmptyComponent={<Unknown />}
    accessibilityState={
      Object {
        "busy": false,
      }
    }
    contentContainerStyle={
      Object {
        "paddingBottom": 150,
        "paddingHorizontal": 10,
      }
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        colors={
          Array [
            "#6200ee",
          ]
        }
        onRefresh={[MockFunction]}
        refreshing={false}
        tintColor="#6200ee"
      />
    }
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "margin": 20,
          }
        }
        testID="error-message"
      >
        <View
          accessibilityRole="image"
          style={
            Array [
              Object {
                "backgroundColor": "#6200ee",
                "borderRadius": 37.5,
                "height": 75,
                "width": 75,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "marginBottom": 10,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="header"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "letterSpacing": 0.15,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    undefined,
                  ],
                ],
              ]
            }
          >
            Oops, something went wrong! 😱
          </Text>
          <Text
            accessibilityRole="text"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 16,
                      "letterSpacing": 0.5,
                      "lineHeight": 24,
                      "marginVertical": 2,
                    },
                    Object {
                      "textAlign": "center",
                    },
                  ],
                ],
              ]
            }
          >
            We had some internal issues with this request. Please try again later 🛠
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Organizations screen handle request status feedback renders loading state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f7f7f7",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListEmptyComponent={<Unknown />}
    accessibilityState={
      Object {
        "busy": true,
      }
    }
    contentContainerStyle={
      Object {
        "paddingBottom": 150,
        "paddingHorizontal": 10,
      }
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        colors={
          Array [
            "#6200ee",
          ]
        }
        onRefresh={[MockFunction]}
        refreshing={true}
        tintColor="#6200ee"
      />
    }
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
  >
    <RCTRefreshControl />
    <View>
      <View
        accessibilityLabel="Loading organizations"
        accessibilityRole="progressbar"
        accessibilityState={
          Object {
            "busy": true,
          }
        }
        accessible={true}
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Object {
              "marginTop": 25,
            },
          ]
        }
        testID="activity-indicator"
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 24,
              "opacity": 1,
              "width": 24,
            }
          }
        >
          <View
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 24,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 24,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "height": 12,
                    "overflow": "hidden",
                    "width": 24,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 24,
                      "transform": Array [
                        Object {
                          "translateY": 0,
                        },
                        Object {
                          "rotate": "-165deg",
                        },
                      ],
                      "width": 24,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 12,
                        "overflow": "hidden",
                        "width": 24,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      nativeID="animatedComponent"
                      style={
                        Object {
                          "borderColor": "#6200ee",
                          "borderRadius": 12,
                          "borderWidth": 2.4,
                          "height": 24,
                          "width": 24,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "alignItems": "center",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 24,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 24,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "height": 12,
                    "overflow": "hidden",
                    "top": 12,
                    "width": 24,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": 24,
                      "transform": Array [
                        Object {
                          "translateY": -12,
                        },
                        Object {
                          "rotate": "345deg",
                        },
                      ],
                      "width": 24,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      Object {
                        "height": 12,
                        "overflow": "hidden",
                        "width": 24,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      nativeID="animatedComponent"
                      style={
                        Object {
                          "borderColor": "#6200ee",
                          "borderRadius": 12,
                          "borderWidth": 2.4,
                          "height": 24,
                          "width": 24,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Organizations screen handle request success matches snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f7f7f7",
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    nativeID="animatedComponent"
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "borderRadius": 0,
        "elevation": 4,
        "flexDirection": "row",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 3,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 4,
      }
    }
  >
    <View
      accessibilityLabel="search"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 6,
          "left": 6,
          "right": 6,
          "top": 6,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "margin": 6,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View />
    </View>
    <TextInput
      accessibilityRole="search"
      accessibilityTraits="search"
      autoComplete="off"
      keyboardAppearance="light"
      onChangeText={[Function]}
      placeholder="Search organizations by name"
      placeholderTextColor="rgba(0, 0, 0, 0.54)"
      returnKeyType="search"
      selectionColor="#6200ee"
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "flex": 1,
            "fontSize": 18,
            "minWidth": 0,
            "paddingLeft": 8,
            "textAlign": "left",
          },
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "fontSize": 15,
          },
        ]
      }
      testID="organizations-searchbar"
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessibilityLabel="clear"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 6,
          "left": 6,
          "right": 6,
          "top": 6,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "margin": 6,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            Object {
              "opacity": 0.32,
            },
            undefined,
          ],
        ]
      }
    >
      <View />
    </View>
  </View>
  <RCTScrollView
    ListEmptyComponent={<Unknown />}
    accessibilityState={
      Object {
        "busy": false,
      }
    }
    contentContainerStyle={
      Object {
        "paddingBottom": 150,
        "paddingHorizontal": 10,
      }
    }
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
              "ein": "1",
              "name": "Animal Shelter",
              "type": "Animal",
              "uri": "https://www.example.com/logo.png",
            },
            Object {
              "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
              "ein": "2",
              "name": "Animal Rescue",
              "type": "Animal",
              "uri": "https://www.example.com/logo.png",
            },
          ],
          "title": "Animal",
        },
        Object {
          "data": Array [
            Object {
              "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
              "ein": "3",
              "name": "Soccer Club",
              "type": "Sport",
              "uri": "https://www.example.com/logo.png",
            },
            Object {
              "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
              "ein": "4",
              "name": "Basketball Club",
              "type": "Sport",
              "uri": "https://www.example.com/logo.png",
            },
          ],
          "title": "Sport",
        },
        Object {
          "data": Array [
            Object {
              "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
              "ein": "5",
              "name": "Marine Rescue",
              "type": "Marine",
              "uri": "https://www.example.com/logo.png",
            },
          ],
          "title": "Marine",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        colors={
          Array [
            "#6200ee",
          ]
        }
        onRefresh={[MockFunction]}
        refreshing={false}
        tintColor="#6200ee"
      />
    }
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={
      Array [
        0,
        4,
        8,
      ]
    }
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#f7f7f7",
            }
          }
        >
          <View
            accessibilityRole="header"
            style={
              Array [
                Object {
                  "marginVertical": 8,
                },
                undefined,
              ]
            }
            theme={
              Object {
                "animation": Object {
                  "scale": 1,
                },
                "colors": Object {
                  "accent": "#03dac4",
                  "backdrop": "rgba(0, 0, 0, 0.5)",
                  "background": "#f6f6f6",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "error": "#B00020",
                  "notification": "#f50057",
                  "onSurface": "#000000",
                  "placeholder": "rgba(0, 0, 0, 0.54)",
                  "primary": "#6200ee",
                  "surface": "#ffffff",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": Object {
                    "fontFamily": "System",
                    "fontWeight": "300",
                  },
                  "medium": Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  "regular": Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  "thin": Object {
                    "fontFamily": "System",
                    "fontWeight": "100",
                  },
                },
                "roundness": 4,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontFamily": "System",
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Animal
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View>
          <View
            accessibilityHint="Opens the organization details page"
            accessibilityLabel="Animal Shelter"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                false,
                Array [
                  Object {
                    "padding": 8,
                  },
                  undefined,
                ],
              ]
            }
            testID="organization-list-item-1"
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityRole="image"
                color="rgba(0, 0, 0, 0.54)"
                style={
                  Array [
                    Object {
                      "backgroundColor": "#6200ee",
                      "borderRadius": 32,
                      "height": 64,
                      "width": 64,
                    },
                    Object {
                      "marginLeft": 0,
                      "marginRight": 16,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://www.example.com/logo.png",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 32,
                      "height": 64,
                      "width": 64,
                    }
                  }
                />
              </View>
              <View
                style={
                  Array [
                    Object {
                      "marginVertical": 6,
                      "paddingLeft": 8,
                    },
                    Object {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "fontSize": 16,
                        },
                        Object {
                          "color": "rgba(0, 0, 0, 0.87)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Animal Shelter
                </Text>
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                        },
                        Object {
                          "color": "rgba(0, 0, 0, 0.54)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.12)",
                  "height": 0.5,
                },
                Object {
                  "marginLeft": 72,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityHint="Opens the organization details page"
          accessibilityLabel="Animal Rescue"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                undefined,
              ],
            ]
          }
          testID="organization-list-item-2"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityRole="image"
              color="rgba(0, 0, 0, 0.54)"
              style={
                Array [
                  Object {
                    "backgroundColor": "#6200ee",
                    "borderRadius": 32,
                    "height": 64,
                    "width": 64,
                  },
                  Object {
                    "marginLeft": 0,
                    "marginRight": 16,
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://www.example.com/logo.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 32,
                    "height": 64,
                    "width": 64,
                  }
                }
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Animal Rescue
              </Text>
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#f7f7f7",
            }
          }
        >
          <View
            accessibilityRole="header"
            style={
              Array [
                Object {
                  "marginVertical": 8,
                },
                undefined,
              ]
            }
            theme={
              Object {
                "animation": Object {
                  "scale": 1,
                },
                "colors": Object {
                  "accent": "#03dac4",
                  "backdrop": "rgba(0, 0, 0, 0.5)",
                  "background": "#f6f6f6",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "error": "#B00020",
                  "notification": "#f50057",
                  "onSurface": "#000000",
                  "placeholder": "rgba(0, 0, 0, 0.54)",
                  "primary": "#6200ee",
                  "surface": "#ffffff",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": Object {
                    "fontFamily": "System",
                    "fontWeight": "300",
                  },
                  "medium": Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  "regular": Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  "thin": Object {
                    "fontFamily": "System",
                    "fontWeight": "100",
                  },
                },
                "roundness": 4,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontFamily": "System",
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Sport
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View>
          <View
            accessibilityHint="Opens the organization details page"
            accessibilityLabel="Soccer Club"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                false,
                Array [
                  Object {
                    "padding": 8,
                  },
                  undefined,
                ],
              ]
            }
            testID="organization-list-item-3"
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityRole="image"
                color="rgba(0, 0, 0, 0.54)"
                style={
                  Array [
                    Object {
                      "backgroundColor": "#6200ee",
                      "borderRadius": 32,
                      "height": 64,
                      "width": 64,
                    },
                    Object {
                      "marginLeft": 0,
                      "marginRight": 16,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://www.example.com/logo.png",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 32,
                      "height": 64,
                      "width": 64,
                    }
                  }
                />
              </View>
              <View
                style={
                  Array [
                    Object {
                      "marginVertical": 6,
                      "paddingLeft": 8,
                    },
                    Object {
                      "flex": 1,
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "fontSize": 16,
                        },
                        Object {
                          "color": "rgba(0, 0, 0, 0.87)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Soccer Club
                </Text>
                <Text
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "fontSize": 14,
                        },
                        Object {
                          "color": "rgba(0, 0, 0, 0.54)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.12)",
                  "height": 0.5,
                },
                Object {
                  "marginLeft": 72,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityHint="Opens the organization details page"
          accessibilityLabel="Basketball Club"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                undefined,
              ],
            ]
          }
          testID="organization-list-item-4"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityRole="image"
              color="rgba(0, 0, 0, 0.54)"
              style={
                Array [
                  Object {
                    "backgroundColor": "#6200ee",
                    "borderRadius": 32,
                    "height": 64,
                    "width": 64,
                  },
                  Object {
                    "marginLeft": 0,
                    "marginRight": 16,
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://www.example.com/logo.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 32,
                    "height": 64,
                    "width": 64,
                  }
                }
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Basketball Club
              </Text>
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "backgroundColor": "#f7f7f7",
            }
          }
        >
          <View
            accessibilityRole="header"
            style={
              Array [
                Object {
                  "marginVertical": 8,
                },
                undefined,
              ]
            }
            theme={
              Object {
                "animation": Object {
                  "scale": 1,
                },
                "colors": Object {
                  "accent": "#03dac4",
                  "backdrop": "rgba(0, 0, 0, 0.5)",
                  "background": "#f6f6f6",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "error": "#B00020",
                  "notification": "#f50057",
                  "onSurface": "#000000",
                  "placeholder": "rgba(0, 0, 0, 0.54)",
                  "primary": "#6200ee",
                  "surface": "#ffffff",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": Object {
                    "fontFamily": "System",
                    "fontWeight": "300",
                  },
                  "medium": Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  "regular": Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  "thin": Object {
                    "fontFamily": "System",
                    "fontWeight": "100",
                  },
                },
                "roundness": 4,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "paddingHorizontal": 16,
                      "paddingVertical": 13,
                    },
                    Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontFamily": "System",
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Marine
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityHint="Opens the organization details page"
          accessibilityLabel="Marine Rescue"
          accessibilityRole="button"
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              false,
              Array [
                Object {
                  "padding": 8,
                },
                undefined,
              ],
            ]
          }
          testID="organization-list-item-5"
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityRole="image"
              color="rgba(0, 0, 0, 0.54)"
              style={
                Array [
                  Object {
                    "backgroundColor": "#6200ee",
                    "borderRadius": 32,
                    "height": 64,
                    "width": 64,
                  },
                  Object {
                    "marginLeft": 0,
                    "marginRight": 16,
                  },
                ]
              }
            >
              <Image
                source={
                  Object {
                    "uri": "https://www.example.com/logo.png",
                  }
                }
                style={
                  Object {
                    "borderRadius": 32,
                    "height": 64,
                    "width": 64,
                  }
                }
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 6,
                    "paddingLeft": 8,
                  },
                  Object {
                    "flex": 1,
                    "justifyContent": "center",
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 16,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.87)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Marine Rescue
              </Text>
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                    },
                    Object {
                      "textAlign": "left",
                    },
                    Array [
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`Organizations screen handle request success search organizations by name should correctly show empty message when no organization is found 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f7f7f7",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "borderRadius": 0,
        "elevation": 4,
        "flexDirection": "row",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 3,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 4,
      }
    }
  >
    <View
      accessibilityLabel="search"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 6,
          "left": 6,
          "right": 6,
          "top": 6,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "margin": 6,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View />
    </View>
    <TextInput
      accessibilityRole="search"
      accessibilityTraits="search"
      autoComplete="off"
      keyboardAppearance="light"
      onChangeText={[Function]}
      placeholder="Search organizations by name"
      placeholderTextColor="rgba(0, 0, 0, 0.54)"
      returnKeyType="search"
      selectionColor="#6200ee"
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "flex": 1,
            "fontSize": 18,
            "minWidth": 0,
            "paddingLeft": 8,
            "textAlign": "left",
          },
          Object {
            "color": "#000000",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "fontSize": 15,
          },
        ]
      }
      testID="organizations-searchbar"
      underlineColorAndroid="transparent"
      value="fake-name-that-should-not-exist"
    />
    <View
      accessibilityLabel="clear"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 6,
          "left": 6,
          "right": 6,
          "top": 6,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "margin": 6,
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 18,
              "height": 36,
              "width": 36,
            },
            false,
            undefined,
          ],
        ]
      }
    >
      <View />
    </View>
  </View>
  <RCTScrollView
    ListEmptyComponent={<Unknown />}
    accessibilityState={
      Object {
        "busy": false,
      }
    }
    contentContainerStyle={
      Object {
        "paddingBottom": 150,
        "paddingHorizontal": 10,
      }
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        colors={
          Array [
            "#6200ee",
          ]
        }
        onRefresh={[MockFunction]}
        refreshing={false}
        tintColor="#6200ee"
      />
    }
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "margin": 20,
          }
        }
        testID="empty-message"
      >
        <View
          accessibilityRole="image"
          style={
            Array [
              Object {
                "backgroundColor": "#6200ee",
                "borderRadius": 37.5,
                "height": 75,
                "width": 75,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "marginBottom": 10,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="header"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "letterSpacing": 0.15,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    undefined,
                  ],
                ],
              ]
            }
          >
            No organizations found! 😢
          </Text>
          <Text
            accessibilityRole="text"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 16,
                      "letterSpacing": 0.5,
                      "lineHeight": 24,
                      "marginVertical": 2,
                    },
                    Object {
                      "textAlign": "center",
                    },
                  ],
                ],
              ]
            }
          >
            We are working to serve you with more soon.
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Organizations screen renders empty organizations list state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f7f7f7",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ListEmptyComponent={<Unknown />}
    accessibilityState={
      Object {
        "busy": false,
      }
    }
    contentContainerStyle={
      Object {
        "paddingBottom": 150,
        "paddingHorizontal": 10,
      }
    }
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        colors={
          Array [
            "#6200ee",
          ]
        }
        onRefresh={[MockFunction]}
        refreshing={false}
        tintColor="#6200ee"
      />
    }
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
  >
    <RCTRefreshControl />
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "margin": 20,
          }
        }
        testID="empty-message"
      >
        <View
          accessibilityRole="image"
          style={
            Array [
              Object {
                "backgroundColor": "#6200ee",
                "borderRadius": 37.5,
                "height": 75,
                "width": 75,
              },
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "marginBottom": 10,
              },
            ]
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessibilityRole="header"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "letterSpacing": 0.15,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    undefined,
                  ],
                ],
              ]
            }
          >
            No organizations found! 😢
          </Text>
          <Text
            accessibilityRole="text"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "400",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 16,
                      "letterSpacing": 0.5,
                      "lineHeight": 24,
                      "marginVertical": 2,
                    },
                    Object {
                      "textAlign": "center",
                    },
                  ],
                ],
              ]
            }
          >
            We are working to serve you with more soon.
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
